<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">SP07</string>
    <string name="app_center">App Center</string>
    <string name="settings">Settings</string>
    <string name="manager">Manager</string>
    <string name="hd_in">HD  IN</string>
    <string name="projsettings">ProjSettings</string>
    <string name="same_screen">Same Screen</string>
    <string name="brightness">Brightness</string>
    <string name="projection_mode">Projection Mode</string>
    <string name="keystone_correction">Keystone Correction</string>
    <string name="low_brightness">low brightness</string>
    <string name="normal">normal</string>
    <string name="high_brightness">high brightness</string>
    <string name="rotate_front">rotate front</string>
    <string name="rotate_rear">rotate rear</string>
    <string name="rotate_ceiling">rotate ceiling</string>
    <string name="rotate_rear_ceiling">rotate rear ceiling</string>
    <string name="manual">manual</string>
    <string name="auto">auto</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

</resources>
